Fix for info being hidden behind the clear and/or submit buttons
This will fix the info (translated or not) not being hidden behind the clear and/or submit buttons.
Smaller screens the button move to below the text already, so there the full width is used like it was before

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -84,6 +84,12 @@
 	}
 }
 
+@media (min-width: 768px) {
+	.datepicker__info  {
+		max-width: 325px;
+	}
+}
+
 .datepicker__info--feedback {
 	display: none;
 }
